--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script>
     window.fbAsyncInit = function() {
       FB.init({
-      appId      : 'YOUR_APP_ID', // App ID
+      appId      : '587389484676369', // App ID
       channelUrl : 'http://sandraszenti.github.io/channel-test/index.html',
       status     : true, // check login status
       cookie     : true, // enable cookies to allow the server to access the session
