fb app id and channel file changes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <script>
     window.fbAsyncInit = function() {
       FB.init({
-      appId      : '587389484676369', // App ID
-      channelUrl : 'http://sandraszenti.github.io/channel-test/index.html',
+      appId      : '198937526977949', // App ID
+      channelUrl : 'channel.html',
       status     : true, // check login status
       cookie     : true, // enable cookies to allow the server to access the session
       xfbml      : true  // parse XFBML
