fb load status and gmaps added to page, friends loaded

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
       <p>This is some silly paragraph that talks about the page in general. I will now try and connect you to the fantastic social network of Facebook. Please go on and click on the button below so that I can access your profile and friend list. All the data I pull in is already public, so actually I don't see anything that you already haven't provided access to all the folks on the net.</p>
       <a href="#" id="fb-login-button">login to facebook</a>
     </div>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
   </body>
 </html>
