copy updated, fb login button js update

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
     <div id="fb-root"></div>
     <div id="container">
-      <h1>Hello Facebook World</h1>
-      <p>This is some silly paragraph that talks about the page in general. I will now try and connect you to the fantastic social network of Facebook. Please go on and click on the button below so that I can access your profile and friend list. All the data I pull in is already public, so actually I don't see anything that you already haven't provided access to all the folks on the net.</p>
+      <h1>Facebook FriendLocator</h1>
+      <p>Now you can easily search for your Facebook friends around the world! Wait till the 'Login to Facebook' button below appears, click on it, and allow the app to pull some basic data from your and your friends profile. The app doesn't store any of it, so don't worry, your privacy is safe. In case there's a small technical issue and the button doesn't load, refresh the page till it does :)</p>
       <a href="#" id="fb-login-button">login to facebook</a>
     </div>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
   </body>
 </html>
